[ca] create country variant Valencian Catalan (ca-ES-valencia)

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -11,6 +11,8 @@ br = Breton
 
 ca = Catalan
 
+ca-ES-valencia = Catalan (Valencian)
+
 category_case = Capitalization
 
 category_false_friend = False friends
