--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -11,6 +11,8 @@ br = bret\u00f3
 
 ca = catal\u00e0
 
+ca-ES-valencia = catal\u00e0 (valenci\u00e0) 
+
 category_case = Maj\u00fascules i min\u00fascules
 
 category_false_friend = Falsos amics
