i18n update from Transifex

--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -11,6 +11,8 @@ br = Bretonsk
 
 ca = Catalansk
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = STORE/sm\u00e5 bogstaver
 
 category_false_friend = Falske venner
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (HTTP server k\u00f8re)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
