--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -11,6 +11,8 @@ br = Bretonisch
 
 ca = Katalanisch
 
+ca-ES-valencia = Katalanisch (Valencianisch)
+
 category_case = Gro\u00df-/Kleinschreibung
 
 category_false_friend = Falsche Freunde
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = Automatische Pr\u00fcfung
 guiActivateRule = Regel aktivieren
 
 guiMore = Mehr...
+
+guiUndo = R\u00fcckg\u00e4ngig
+
+guiRedo = Wiederherstellen
