--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -11,6 +11,8 @@ br = Bret\u00e3o
 
 ca = Catal\u00e3o
 
+ca-ES-valencia = Catal\u00e3o (Valenciano)
+
 category_case = Mai\u00fasculas e min\u00fasculas
 
 category_false_friend = Falsos amigos
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = AutoVerificar
 guiActivateRule = Activar Regra
 
 guiMore = Mais...
+
+guiUndo = Desfazer
+
+guiRedo = Refazer
