--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -1,8 +1,8 @@
 LanguageTool Change Log
 
-2.3-SNAPSHOT (release planned for 2013-09-29)
+2.3-SNAPSHOT (release planned for 2013-09-30)
 
- -Breton
+ -Breton:
   -added/improved a few rules
   -fixed false alarms
   -updated POS dictionary from Apertium (svn r47282)
@@ -23,10 +23,13 @@ LanguageTool Change Log
     better (now offers 'taught' for 'teached')
    -added/improved a few rules
 
- -French
+ -French:
   -added/improved a few rules
   -fixed false alarms
   -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.12
+  
+ -German:
+  -added/improved several rules
 
  -Portuguese:
   -added/improved a few rules
