i18n update from Transifex

--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -11,6 +11,8 @@ br = Bret\u00f3n
 
 ca = Catal\u00e1n
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = May\u00fascules y min\u00fascules
 
 category_false_friend = Amigos falsos
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (sirvidor HTTP execut\u00e1ndose)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
