--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -11,6 +11,8 @@ br = Brezhoneg
 
 ca = Katalaneg
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Pennlizherenno\u00f9
 
 category_false_friend = Falsvignoned
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = EmWiria\u00f1
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
