--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -11,7 +11,7 @@ br = bret\u00f3
 
 ca = catal\u00e0
 
-ca-ES-valencia = catal\u00e0 (valenci\u00e0) 
+ca-ES-valencia = catal\u00e0 (valenci\u00e0)
 
 category_case = Maj\u00fascules i min\u00fascules
 
@@ -336,3 +336,7 @@ autoCheckTextLongDesc = Revisi\u00f3 autom\u00e0tica
 guiActivateRule = Activa la regla
 
 guiMore = M\u00e9s...
+
+guiUndo = Desf\u00e9s
+
+guiRedo = Ref\u00e9s
