--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -11,6 +11,8 @@ br = \u0392\u03c1\u03b5\u03c4\u03bf\u03bd\u03b9\u03ba\u03ac
 
 ca = \u039a\u03b1\u03c4\u03b1\u03bb\u03b1\u03bd\u03b9\u03ba\u03ac
 
+ca-ES-valencia = \u039a\u03b1\u03c4\u03b1\u03bb\u03b1\u03bd\u03b9\u03ba\u03ac (Valencian)
+
 category_case = \u03a7\u03c1\u03ae\u03c3\u03b7 \u03ba\u03b5\u03c6\u03b1\u03bb\u03b1\u03af\u03c9\u03bd
 
 category_false_friend = \u03a8\u03b5\u03c5\u03b4\u03cc\u03c6\u03b9\u03bb\u03b1
@@ -25,9 +27,9 @@ checkDone = \u03a4\u03ad\u03bb\u03bf\u03c2 \u03b5\u03bb\u03ad\u03b3\u03c7\u03bf\
 
 checkText = &\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 
 correctionMessage = \u0394\u03b9\u03cc\u03c1\u03b8\u03c9\u03c3\u03b7\:
 
@@ -154,9 +156,9 @@ guiMenuHide = \u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03c3\u03c4\u03b
 
 guiMenuOpen = &\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = \u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = \u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 
 guiMenuOptions = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2
 
@@ -297,40 +299,44 @@ tray_menu_enable_server = \u0395\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03b
 
 tray_tooltip_server_running = LanguageTool (\u03bf \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae\u03c2 HTTP \u03b5\u03ba\u03c4\u03b5\u03bb\u03b5\u03af\u03c4\u03b1\u03b9)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = \u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 
-# guiMenuSave = &Save
+guiMenuSave = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03c9\u03c2
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03c9\u03c2
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03c9\u03c2
 
-# guiMenuCut = Cut
+guiMenuCut = \u0391\u03c0\u03bf\u03ba\u03bf\u03c0\u03ae
 
-# guiMenuCopy = Copy
+guiMenuCopy = \u0391\u03bd\u03c4\u03b9\u03b3\u03c1\u03b1\u03c6\u03ae
 
-# guiMenuPaste = Paste
+guiMenuPaste = \u0395\u03c0\u03b9\u03ba\u03cc\u03bb\u03bb\u03b7\u03c3\u03b7
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03cc\u03bb\u03c9\u03bd
 
-# guiMenuUndo = &Undo
+guiMenuUndo = \u0391\u03bd\u03b1\u03af\u03c1\u03b5\u03c3\u03b7
 
-# guiMenuRedo = &Redo
+guiMenuRedo = \u0395\u03c0\u03b1\u03bd\u03ac\u03bb\u03b7\u03c8\u03b7
 
-# autoCheckText = AutoCheck
+autoCheckText = \u0391\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03ad\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = \u0391\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03bf\u03c2 \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = \u0391\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03bf\u03c2 \u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2
 
-# guiActivateRule = Activate Rule
+guiActivateRule = \u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03ba\u03b1\u03bd\u03cc\u03bd\u03b1
 
-# guiMore = More...
+guiMore = \u03a0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b1...
+
+guiUndo = \u0391\u03bd\u03b1\u03af\u03c1\u03b5\u03c3\u03b7
+
+guiRedo = \u0395\u03c0\u03b1\u03bd\u03ac\u03bb\u03b7\u03c8\u03b7
