--- a/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -11,6 +11,8 @@ br = Bretona
 
 ca = Kataluna
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Uskleco
 
 category_false_friend = Falsaj amikoj
@@ -297,17 +299,17 @@ tray_menu_enable_server = Ruli la HTTP-servilon
 
 tray_tooltip_server_running = Lingvoilo (HTTP-servilo ruli\u011das)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Redakti
 
 # guiMenuGrammar = &Text Checking
 
-# guiMenuSave = &Save
+guiMenuSave = &Konservi
 
 # guiMenuSaveShortDesc = Save File
 
 # guiMenuSaveLongDesc = Save File
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Konservi kie&l
 
 # guiMenuSaveAsShortDesc = Save File As
 
@@ -334,3 +336,7 @@ tray_tooltip_server_running = Lingvoilo (HTTP-servilo ruli\u011das)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
