--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -11,6 +11,8 @@ br = bret\u00f3n
 
 ca = catal\u00e1n
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = May\u00fasculas y min\u00fasculas
 
 category_false_friend = Falsos amigos
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (servidor HTTP ejecut\u00e1ndose)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
