--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -11,6 +11,8 @@ br = Breton
 
 ca = Catalan
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Majuscules
 
 category_false_friend = Faux-amis
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (serveur HTTP actif)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
