--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -11,6 +11,8 @@ br = Bret\u00f3n
 
 ca = Catal\u00e1n
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Mai\u00fasculas e min\u00fasculas
 
 category_false_friend = Falsos amigos
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (servidor HTTP en execuci\u00f3n)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
