--- a/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
+++ b/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
@@ -11,6 +11,8 @@
 
 # ca = Catalan
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = H\u00e1stafur/l\u00e1gstafur
 
 category_false_friend = Falskir vinir
@@ -334,3 +336,7 @@ whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
