--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -11,6 +11,8 @@ br = Bretone
 
 ca = Catalano
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Uso delle maiuscole
 
 category_false_friend = Falsi amici
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (servizio HTTP attivo)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
