--- a/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -11,6 +11,8 @@ br = \u1797\u17b6\u179f\u17b6\u200b\u1794\u17d2\u179a\u17c1\u178f\u17bb\u1784
 
 ca = \u1780\u17b6\u178f\u17b6\u17a1\u17b6\u1793
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = \u178f\u17bd\u17a2\u1780\u17d2\u179f\u179a\u200b\u1792\u17c6
 
 category_false_friend = \u1796\u1796\u17bd\u1780\u200b\u1796\u17b6\u1780\u17d2\u1799\u200b\u178a\u17c2\u179b\u200b\u1798\u17b6\u1793\u200b\u1780\u17b6\u179a\u200b\u1794\u1793\u17d2\u179b\u17ba\u200b\u179f\u17c6\u17a1\u17c1\u1784\u200b\u178a\u17bc\u1785\u200b\u1782\u17d2\u1793\u17b6\u200b\u178f\u17c2\u200b\u1798\u17b6\u1793\u200b\u1793\u17d0\u1799\u200b\u1781\u17bb\u179f\u200b\u1782\u17d2\u1793\u17b6
@@ -334,3 +336,7 @@ ja = \u1797\u17b6\u179f\u17b6\u1787\u1794\u17c9\u17bb\u1793 \u17ac \u1794\u17d2\
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
