--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -11,6 +11,8 @@ be = Baltarusi\u0173
 
 ca = Katalon\u0173
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Did\u017eiosios/ma\u017eosios raid\u0117s
 
 category_false_friend = Netikras draugas
@@ -334,3 +336,7 @@ ro = Rom\u00e2n\u0103
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
