--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -11,6 +11,8 @@ br = Bretons
 
 ca = Catalaans
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Hoofdlettergebruik
 
 category_false_friend = Begripsverwarring
@@ -79,7 +81,7 @@ desc_spelling_short = Spelling onjuist
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Gebruik van spatie voor dubbelepunt, puntkomma en percentteken.
 
 # 3607406 -
 
@@ -219,11 +221,11 @@ no_space_before_dot = Zet geen spatie voor een punt
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Zet geen spatie voor een dubbelepunt
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Zet geen spatie voor een puntkomma
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Zet geen spatie voor een percentteken
 
 # 3607406 -
 
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (HTTP-server actief)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+guiUndo = Ongedaan maken
+
+# guiRedo = Redo
