--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -11,6 +11,8 @@ br = breto\u0144ski
 
 ca = katalo\u0144ski
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Pisownia ma\u0142\u0105 i wielk\u0105 liter\u0105
 
 category_false_friend = Fa\u0142szywi przyjaciele
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (uruchomiony serwer HTTP)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
