--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -11,6 +11,8 @@ br = Bret\u00e3o
 
 ca = Catal\u00e3o
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Mai\u00fasculo / Min\u00fasculo
 
 category_false_friend = Falsos amigos
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (servidor HTTP em execu\u00e7\u00e3o)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
