--- a/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -11,6 +11,8 @@ br = Bret\u00f3nsky
 
 ca = Katal\u00e1nsky
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Ve\u013ek\u00e9 a mal\u00e9 p\u00edsmen\u00e1
 
 category_false_friend = Falo\u0161n\u00fd priatelia
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (HTTP server be\u017e\u00ed)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
