--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -11,6 +11,8 @@ br = bretonski
 
 ca = katalonski
 
+ca-ES-valencia = katalonski (valencijski)
+
 category_case = Velike za\u010detnice
 
 category_false_friend = La\u017eni prijatelji
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = Samodejno preveri
 guiActivateRule = Aktiviraj pravilo
 
 guiMore = Dodatno ...
+
+guiUndo = Razveljavi
+
+guiRedo = Ponovi
