--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -11,6 +11,8 @@ be = Vitryska
 
 ca = Katalanska
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Stor eller liten bokstav
 
 category_false_friend = Oriktiga v\u00e4nner
@@ -334,3 +336,7 @@ ro = Rom\u00e2n\u0103
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
