--- a/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
+++ b/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
@@ -11,6 +11,8 @@ atd = Awtomatikong malalaman ang wika
 
 ca = Katalan
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Kapitalisasiyon
 
 # category_false_friend = False friends
@@ -334,3 +336,7 @@ ja = Hapon
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
