--- a/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -11,6 +11,8 @@ br = \u0411\u0440\u0435\u0442\u043e\u043d\u0441\u044c\u043a\u0430
 
 ca = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u044c\u043a\u0430
 
+ca-ES-valencia = \u041a\u0430\u0442\u0430\u043b\u0430\u043d\u0441\u044c\u043a\u0438\u0439 (\u0412\u0430\u043b\u0435\u043d\u0441\u0456\u044f)
+
 category_case = \u0412\u0435\u043b\u0438\u043a\u0456 \u043b\u0456\u0442\u0435\u0440\u0438
 
 category_false_friend = \u0424\u0430\u043b\u044c\u0448\u0438\u0432\u0456 \u0434\u0440\u0443\u0437\u0456
@@ -25,9 +27,9 @@ checkDone = \u0417\u043d\u0430\u0439\u0434\u0435\u043d\u043e {0} \u043f\u043e\u0
 
 checkText = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 \u0442\u0435\u043a\u0441\u0442
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 \u0442\u0435\u043a\u0441\u0442
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 \u0442\u0435\u043a\u0441\u0442
 
 correctionMessage = \u0412\u0438\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043d\u044f\:
 
@@ -154,9 +156,9 @@ guiMenuHide = \u0421\u0445\u043e\u0432\u0430\u0442\u0438 \u0432 \u0441\u0438\u04
 
 guiMenuOpen = \u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = \u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438 \u0444\u0430\u0439\u043b
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = \u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438 \u0444\u0430\u0439\u043b
 
 guiMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438...
 
@@ -297,40 +299,44 @@ tray_menu_enable_server = \u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0438
 
 tray_tooltip_server_running = LanguageTool (HTTP-\u0441\u0435\u0440\u0432\u0435\u0440 \u0437\u0430\u043f\u0443\u0449\u0435\u043d\u043e)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = \u0417\u043c\u0456\u043d\u0438
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u044f\u043d\u043d\u044f \u0442\u0435\u043a\u0441\u0442\u0443
 
-# guiMenuSave = &Save
+guiMenuSave = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u0444\u0430\u0439\u043b
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u0444\u0430\u0439\u043b
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u044f\u043a
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u0444\u0430\u0439\u043b \u044f\u043a
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u0444\u0430\u0439\u043b \u044f\u043a
 
-# guiMenuCut = Cut
+guiMenuCut = \u0412\u0438\u0440\u0456\u0437\u0430\u0442\u0438
 
-# guiMenuCopy = Copy
+guiMenuCopy = \u041a\u043e\u043f\u0456\u044e\u0432\u0430\u0442\u0438
 
-# guiMenuPaste = Paste
+guiMenuPaste = \u0412\u0441\u0442\u0430\u0432\u0438\u0442\u0438
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = \u0412\u0438\u0431\u0440\u0430\u0442\u0438 \u0432\u0441\u0435
 
-# guiMenuUndo = &Undo
+guiMenuUndo = \u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438
 
-# guiMenuRedo = &Redo
+guiMenuRedo = \u041f\u043e\u0432\u0442\u043e\u0440\u0438\u0442\u0438
 
-# autoCheckText = AutoCheck
+autoCheckText = \u0410\u0432\u0442\u043e\u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0430
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = \u0410\u0432\u0442\u043e\u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0430
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = \u0410\u0432\u0442\u043e\u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0430
 
-# guiActivateRule = Activate Rule
+guiActivateRule = \u0423\u0432\u0456\u043c\u043a\u043d\u0443\u0442\u0438 \u043f\u0440\u0430\u0432\u0438\u043b\u043e
 
-# guiMore = More...
+guiMore = \u0429\u0435...
+
+guiUndo = \u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438
+
+guiRedo = \u041f\u043e\u0432\u0442\u043e\u0440\u0438\u0442\u0438
