--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -11,6 +11,8 @@ br = \u0411\u0440\u044d\u0442\u043e\u043d\u0441\u043a\u0430\u044f
 
 ca = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u043a\u0430\u044f
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = \u0412\u044f\u043b\u0456\u043a\u0456\u044f \u043b\u0456\u0442\u0430\u0440\u044b
 
 category_false_friend = \u0410\u043c\u043e\u043d\u0456\u043c\u044b
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = \u041f\u0440\u0430\u0432\u044f\u0440\u0430\u0446\u044c \
 guiActivateRule = \u0410\u043a\u0442\u044b\u0432\u0443\u0439\u0446\u0435 \u043f\u0440\u0430\u0432\u0456\u043b\u044b
 
 guiMore = \u0411\u043e\u043b\u044c\u0448 \u043f\u0430\u0434\u0440\u0430\u0431\u044f\u0437\u043d\u0430 ...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
