--- a/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -11,6 +11,8 @@ br = Breton\u0103
 
 ca = Catalan\u0103
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = Capitalizare
 
 category_false_friend = Prieteni fal\u0219i
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (server-ul HTTP ruleaz\u0103)
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
