--- a/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
+++ b/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
@@ -11,6 +11,8 @@ br = \u0411\u0440\u0435\u0442\u043e\u043d\u0441\u043a\u0438\u0439
 
 ca = \u041a\u0430\u0442\u0430\u043b\u0430\u043d\u0441\u043a\u0438\u0439
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = \u0417\u0430\u0433\u043b\u0430\u0432\u043d\u044b\u0435 \u0431\u0443\u043a\u0432\u044b
 
 category_false_friend = \u041e\u043c\u043e\u043d\u0438\u043c\u044b
@@ -334,3 +336,7 @@ autoCheckTextLongDesc = \u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u
 guiActivateRule = \u0417\u0430\u0434\u0435\u0439\u0441\u0442\u0432\u043e\u0432\u0430\u0442\u044c \u043f\u0440\u0430\u0432\u0438\u043b\u043e
 
 guiMore = \u0414\u0430\u043b\u0435\u0435...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
