--- a/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -11,6 +11,8 @@ br = \u5e03\u5217\u5854\u5c3c\u8bed
 
 ca = \u52a0\u6cf0\u7f57\u5c3c\u4e9a\u8bed
 
+# ca-ES-valencia = Catalan (Valencian)
+
 category_case = \u5927\u5199
 
 category_false_friend = \u5bb9\u6613\u8bd1\u9519\u7684\u8bcd\u8bed
@@ -334,3 +336,7 @@ tray_tooltip_server_running = LanguageTool (HTTP\u670d\u52a1\u5668\u6b63\u5728\u
 # guiActivateRule = Activate Rule
 
 # guiMore = More...
+
+# guiUndo = Undo
+
+# guiRedo = Redo
