i18n update from Transifex

--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -11,7 +11,7 @@ br = Bretone
 
 ca = Catalano
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Catalano (Valenciano)
 
 category_case = Uso delle maiuscole
 
@@ -27,9 +27,9 @@ checkDone = Controllo completato, sono stati trovati {0} possibili errori
 
 checkText = &Controlla Testo
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Controlla Testo
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Controlla Testo
 
 correctionMessage = Correzione\:
 
@@ -156,9 +156,9 @@ guiMenuHide = &Minimizza nel System Tray
 
 guiMenuOpen = &Apri...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Apri File
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Apri File
 
 guiMenuOptions = Opzio&ni...
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = Avviare il servizio HTTP.
 
 tray_tooltip_server_running = LanguageTool (servizio HTTP attivo)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Edita
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = Controllo &Testo
 
-# guiMenuSave = &Save
+guiMenuSave = &Salva
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Salva File
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Salva File
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Save &con nome
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Salva File con nome
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Salva con nome
 
-# guiMenuCut = Cut
+guiMenuCut = Taglia
 
-# guiMenuCopy = Copy
+guiMenuCopy = Copia
 
-# guiMenuPaste = Paste
+guiMenuPaste = Incolla
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Seleziona tutto
 
-# guiMenuUndo = &Undo
+guiMenuUndo = &Undo
 
-# guiMenuRedo = &Redo
+guiMenuRedo = &Redo
 
-# autoCheckText = AutoCheck
+autoCheckText = ControlloAutomatico
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = ControlloAutomatico
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = ControlloAutomatico
 
-# guiActivateRule = Activate Rule
+guiActivateRule = Attiva Regola
 
-# guiMore = More...
+guiMore = Ancora...
 
-# guiUndo = Undo
+guiUndo = Undo
 
-# guiRedo = Redo
+guiRedo = Redo
