--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -11,7 +11,7 @@ br = breto\u0144ski
 
 ca = katalo\u0144ski
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Katalo\u0144ski (Walencja)
 
 category_case = Pisownia ma\u0142\u0105 i wielk\u0105 liter\u0105
 
@@ -27,9 +27,9 @@ checkDone = Sprawdzono. Liczba znalezionych potencjalnych problem\u00f3w\: {0}
 
 checkText = &Sprawd\u017a tekst
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Sprawd\u017a tekst
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Sprawd\u017a tekst
 
 correctionMessage = Proponowana poprawka\:
 
@@ -81,7 +81,7 @@ desc_spelling_short = B\u0142\u0119dna pisownia
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = U\u017cycie spacji przez dwukropkiem, \u015brednikiem i procentem
 
 # 3607406 -
 
@@ -156,9 +156,9 @@ guiMenuHide = Schowaj do paska &zada\u0144
 
 guiMenuOpen = &Otw\u00f3rz...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Otw\u00f3rz plik
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Otw\u00f3rz plik
 
 guiMenuOptions = &Opcje...
 
@@ -221,11 +221,11 @@ no_space_before_dot = Nie wstawiamy spacji przed kropk\u0105
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Nie wstawiamy spacji przed dwukropkiem
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Nie wstawiamy spacji przed \u015brednikiem
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Nie wstawiamy spacji przed znakiem procenta
 
 # 3607406 -
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = Uruchom serwer HTTP
 
 tray_tooltip_server_running = LanguageTool (uruchomiony serwer HTTP)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Edycja
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = Sprawdzanie tekstu
 
-# guiMenuSave = &Save
+guiMenuSave = &Zapisz
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Zapisz plik
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Zapisz plik
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Zapisz &jako
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Zapisz plik jako
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Zapisz plik jako
 
-# guiMenuCut = Cut
+guiMenuCut = Wytnij
 
-# guiMenuCopy = Copy
+guiMenuCopy = Kopiuj
 
-# guiMenuPaste = Paste
+guiMenuPaste = Wklej
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Zaznacz wszystko
 
-# guiMenuUndo = &Undo
+guiMenuUndo = &Cofnij
 
-# guiMenuRedo = &Redo
+guiMenuRedo = &Pon\u00f3w
 
-# autoCheckText = AutoCheck
+autoCheckText = Sprawd\u017a automatycznie
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = Sprawd\u017a automatycznie
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = Sprawd\u017a automatycznie
 
-# guiActivateRule = Activate Rule
+guiActivateRule = W\u0142\u0105cz regu\u0142\u0119
 
-# guiMore = More...
+guiMore = Wi\u0119cej...
 
-# guiUndo = Undo
+guiUndo = Cofnij
 
-# guiRedo = Redo
+guiRedo = Pon\u00f3w
