--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -11,7 +11,7 @@ br = \u0411\u0440\u044d\u0442\u043e\u043d\u0441\u043a\u0430\u044f
 
 ca = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u043a\u0430\u044f
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u043a\u0456 (\u0412\u0430\u043b\u0435\u043d\u0441\u0456\u044f)
 
 category_case = \u0412\u044f\u043b\u0456\u043a\u0456\u044f \u043b\u0456\u0442\u0430\u0440\u044b
 
@@ -337,6 +337,6 @@ guiActivateRule = \u0410\u043a\u0442\u044b\u0432\u0443\u0439\u0446\u0435 \u043f\
 
 guiMore = \u0411\u043e\u043b\u044c\u0448 \u043f\u0430\u0434\u0440\u0430\u0431\u044f\u0437\u043d\u0430 ...
 
-# guiUndo = Undo
+guiUndo = \u0410\u0434\u043c\u044f\u043d\u0456\u0446\u044c
 
-# guiRedo = Redo
+guiRedo = \u041f\u0430\u045e\u0442\u0430\u0440\u044b\u0446\u044c
