--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -11,7 +11,7 @@ br = Bretons
 
 ca = Catalaans
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Catalaans (Valenciaans)
 
 category_case = Hoofdlettergebruik
 
@@ -27,9 +27,9 @@ checkDone = Klaar, {0} aandachtspunten
 
 checkText = Tekst controleren
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Controleer tekst
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Controleer tekst
 
 correctionMessage = Suggestie\:
 
@@ -156,9 +156,9 @@ guiMenuHide = Naar systeemvak
 
 guiMenuOpen = Openen...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Open Bestand
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Open bestand
 
 guiMenuOptions = Opties...
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = Voor de HTTP-server uit.
 
 tray_tooltip_server_running = LanguageTool (HTTP-server actief)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = Be&werken
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = &Tekstcontrole
 
-# guiMenuSave = &Save
+guiMenuSave = &Opslaan
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Opslaan
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Opslaan
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Opslaan &als
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Opslaan als
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Opslaan als
 
-# guiMenuCut = Cut
+guiMenuCut = K&nippen
 
-# guiMenuCopy = Copy
+guiMenuCopy = &Kopi\u00ebren
 
-# guiMenuPaste = Paste
+guiMenuPaste = &Plakken
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Selecteer alles
 
-# guiMenuUndo = &Undo
+guiMenuUndo = &Ongedaan maken
 
-# guiMenuRedo = &Redo
+guiMenuRedo = Opnieuw &toepassen
 
-# autoCheckText = AutoCheck
+autoCheckText = Automatische &controle
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = Automatische controle
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = Automatische controle
 
-# guiActivateRule = Activate Rule
+guiActivateRule = Regel inschakelen
 
-# guiMore = More...
+guiMore = Meer...
 
 guiUndo = Ongedaan maken
 
-# guiRedo = Redo
+guiRedo = Opnieuw toepassen
