--- a/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
+++ b/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
@@ -11,7 +11,7 @@ br = \u0411\u0440\u0435\u0442\u043e\u043d\u0441\u043a\u0438\u0439
 
 ca = \u041a\u0430\u0442\u0430\u043b\u0430\u043d\u0441\u043a\u0438\u0439
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u043a\u0438\u0439 (\u0412\u0430\u043b\u0435\u043d\u0441\u0438\u044f)
 
 category_case = \u0417\u0430\u0433\u043b\u0430\u0432\u043d\u044b\u0435 \u0431\u0443\u043a\u0432\u044b
 
@@ -337,6 +337,6 @@ guiActivateRule = \u0417\u0430\u0434\u0435\u0439\u0441\u0442\u0432\u043e\u0432\u
 
 guiMore = \u0414\u0430\u043b\u0435\u0435...
 
-# guiUndo = Undo
+guiUndo = \u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c
 
-# guiRedo = Redo
+guiRedo = \u041f\u043e\u0432\u0442\u043e\u0440\u0438\u0442\u044c
