copy content from MessageBundle.properties

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -27,6 +27,10 @@ checkDone = Potential problems found: {0} (time: {1}ms)
 
 checkText = &Check Text
 
+checkTextShortDesc = Check Text
+
+checkTextLongDesc = Check Text
+
 correctionMessage = Correction:
 
 cs = Czech
@@ -74,6 +78,12 @@ desc_spelling = Possible spelling mistake
 desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
 
 desc_spelling_short = Spelling mistake
+
+# 3607406 +
+
+desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
 
 double_dots_short = Two consecutive dots
 
@@ -146,6 +156,10 @@ guiMenuHide = &Hide to System Tray
 
 guiMenuOpen = &Open...
 
+guiMenuOpenShortDesc = Open File
+
+guiMenuOpenLongDesc = Open File
+
 guiMenuOptions = Option&s...
 
 guiMenuQuit = &Quit
@@ -204,6 +218,16 @@ no_space_after = Don't put a space after the opening parenthesis
 no_space_before = Don't put a space before the closing parenthesis
 
 no_space_before_dot = Don't put a space before the full stop
+
+# 3607406 +
+
+no_space_before_colon = Don't put a space before the colon
+
+no_space_before_semicolon = Don't put a space before the semicolon
+
+no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polish
 
@@ -274,3 +298,45 @@ https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not b
 tray_menu_enable_server = Run HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+guiMenuEdit = &Edit
+
+guiMenuGrammar = &Text Checking
+
+guiMenuSave = &Save
+
+guiMenuSaveShortDesc = Save File
+
+guiMenuSaveLongDesc = Save File
+
+guiMenuSaveAs = Save &As
+
+guiMenuSaveAsShortDesc = Save File As
+
+guiMenuSaveAsLongDesc = Save File As
+
+guiMenuCut = Cut
+
+guiMenuCopy = Copy
+
+guiMenuPaste = Paste
+
+guiMenuSelectAll = Select All
+
+guiMenuUndo = &Undo
+
+guiMenuRedo = &Redo
+
+autoCheckText = AutoCheck
+
+autoCheckTextShortDesc = AutoCheck
+
+autoCheckTextLongDesc = AutoCheck
+
+guiActivateRule = Activate Rule
+
+guiMore = More...
+
+guiUndo = Undo
+
+guiRedo = Redo
