i18n update from Transifex

--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -11,7 +11,7 @@ br = Bretonsk
 
 ca = Catalansk
 
-# ca-ES-valencia = Catalan (Valencian)
+ca-ES-valencia = Catalansk (Valencia)
 
 category_case = STORE/sm\u00e5 bogstaver
 
@@ -27,9 +27,9 @@ checkDone = Kontrol gennemf\u00f8rt, mulige problemer fundet {0}
 
 checkText = &Kontrollere tekst
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Kontrollere tekst
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Kontrollere tekst
 
 correctionMessage = Korrektion\:
 
@@ -156,9 +156,9 @@ guiMenuHide = &Skjul til systembakken
 
 guiMenuOpen = &\u00c5bn...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = \u00c5bn fil
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = \u00c5bn fil
 
 guiMenuOptions = &Indstillinger...
 
@@ -178,9 +178,9 @@ guiOOoChangeButton = &\u00c6ndr
 
 guiOOoCloseButton = &Luk
 
-guiOOoIgnoreAllButton = I&gnorer alle
+guiOOoIgnoreAllButton = Ignorer alle
 
-guiOOoIgnoreButton = &Ignorer her
+guiOOoIgnoreButton = Ignorer her
 
 guiOOoOptionsButton = In&dstillinger...
 
@@ -299,44 +299,44 @@ tray_menu_enable_server = K\u00f8r HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server k\u00f8re)
 
-# guiMenuEdit = &Edit
+guiMenuEdit = &Rediger
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = &Tekst-kontrol
 
-# guiMenuSave = &Save
+guiMenuSave = &Gem
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Gem fil
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Gem fil
 
-# guiMenuSaveAs = Save &As
+guiMenuSaveAs = Ge&m som...
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Gem fil som...
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Gem fil som...
 
-# guiMenuCut = Cut
+guiMenuCut = &Klip
 
-# guiMenuCopy = Copy
+guiMenuCopy = K&opier
 
-# guiMenuPaste = Paste
+guiMenuPaste = S\u00e6t i&nd
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Marker &alt
 
-# guiMenuUndo = &Undo
+guiMenuUndo = Fortr&yd
 
-# guiMenuRedo = &Redo
+guiMenuRedo = Gendan
 
-# autoCheckText = AutoCheck
+autoCheckText = Automatisk kontrol
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = Automatisk kontrol
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = Automatisk kontrol
 
-# guiActivateRule = Activate Rule
+guiActivateRule = Aktiver regel
 
-# guiMore = More...
+guiMore = Mere information...
 
-# guiUndo = Undo
+guiUndo = Fortryd
 
-# guiRedo = Redo
+guiRedo = Gendan
