--- a/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -27,9 +27,9 @@ checkDone = Kontrolo farita, {0} eblaj problemoj trovitaj
 
 checkText = &Kontroli tekston
 
-# checkTextShortDesc = Check Text
+checkTextShortDesc = Kontroli tekston
 
-# checkTextLongDesc = Check Text
+checkTextLongDesc = Kontroli tekston
 
 correctionMessage = Korektado\:
 
@@ -156,9 +156,9 @@ guiMenuHide = K&a\u015di en la taskopleto
 
 guiMenuOpen = &Malfermi...
 
-# guiMenuOpenShortDesc = Open File
+guiMenuOpenShortDesc = Malfermi dosieron
 
-# guiMenuOpenLongDesc = Open File
+guiMenuOpenLongDesc = Malfermi dosieron
 
 guiMenuOptions = &Opcioj...
 
@@ -301,42 +301,42 @@ tray_tooltip_server_running = Lingvoilo (HTTP-servilo ruli\u011das)
 
 guiMenuEdit = &Redakti
 
-# guiMenuGrammar = &Text Checking
+guiMenuGrammar = &Kontroli tekston
 
 guiMenuSave = &Konservi
 
-# guiMenuSaveShortDesc = Save File
+guiMenuSaveShortDesc = Konservi dosieron
 
-# guiMenuSaveLongDesc = Save File
+guiMenuSaveLongDesc = Konservi dosieron
 
 guiMenuSaveAs = Konservi kie&l
 
-# guiMenuSaveAsShortDesc = Save File As
+guiMenuSaveAsShortDesc = Konservi dosieron kiel
 
-# guiMenuSaveAsLongDesc = Save File As
+guiMenuSaveAsLongDesc = Konservi dosieron kiel
 
-# guiMenuCut = Cut
+guiMenuCut = Eltondi
 
-# guiMenuCopy = Copy
+guiMenuCopy = Kopii
 
-# guiMenuPaste = Paste
+guiMenuPaste = Alglui
 
-# guiMenuSelectAll = Select All
+guiMenuSelectAll = Apartigi \u0109ion
 
-# guiMenuUndo = &Undo
+guiMenuUndo = &Malfari
 
-# guiMenuRedo = &Redo
+guiMenuRedo = &Refari
 
-# autoCheckText = AutoCheck
+autoCheckText = A\u016dtokontroli
 
-# autoCheckTextShortDesc = AutoCheck
+autoCheckTextShortDesc = A\u016dtokontroli
 
-# autoCheckTextLongDesc = AutoCheck
+autoCheckTextLongDesc = A\u016dtokontroli
 
-# guiActivateRule = Activate Rule
+guiActivateRule = \u015calti regulon
 
-# guiMore = More...
+guiMore = Pli\u2026
 
-# guiUndo = Undo
+guiUndo = Malfari
 
-# guiRedo = Redo
+guiRedo = Refari
